--- a/FragmentDemo/app/src/main/AndroidManifest.xml
+++ b/FragmentDemo/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".MainActivity"
+        <activity android:name=".SecondMainActivity"
             android:theme="@android:style/Theme.Translucent"
             >
             <intent-filter>
