--- a/IPCAidl/aidlservice/src/main/AndroidManifest.xml
+++ b/IPCAidl/aidlservice/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+<activity android:name=".MyActivity">
 
+    
+</activity>
 
         <service android:name=".BookManagerService"
 
